# SAGE_SAM

./: .gitignore  BASELINE_REFERENCE.json  METHOD.md  NOTICE.md  README.md  prediction_multiclass.py  prediction_sage_sam.py  pyproject.toml  requirements.txt  test_sage_sam.py  train_sage_sam.py  train_semi_SAM.py  trainer.py
Measurement/: 大脑外侧裂测量示意图.pptx  大脑外侧裂测量结果汇报_自动生成.pptx
Model/: __init__.py  discriminator.py  model.py  sage_model.py  sam_structure_encoder.py
batch_inference/: batch_infer_a3.py
configs/: ablation_dual_supervised.yaml  ablation_full.yaml  ablation_set_only.yaml  ablation_set_structure.yaml  sage_sam_3class.yaml  smoke_cpu.yaml
dataloader/: __init__.py  builders.py  calibration_split.py  dataset.py  infinite_iterator.py  sage_dataset.py
docs/: IMPLEMENTATION_NOTES.md  KNOWSAM_TO_SAGE_MAPPING.md  REFERENCE_MAPPING.md
engine/: __init__.py  checkpoint.py  evaluator.py  logger.py  sage_trainer.py
sage_ssl/: __init__.py  adaptive_augmentation.py  candidate_sets.py  conflict_to_set.py  conformal_calibration.py  graph_propagation.py  hardness.py  relational_consistency.py  schedules.py  set_losses.py  structure_cache.py  structure_calibration.py  structure_graph.py  structure_losses.py  structures.py
scripts/: measure_output_masks.py  precompute_sage_sam_structure_editable.sh  precompute_structure_v100.sh  run_ablations.sh  smoke_test.py  smoke_test_multiclass_fixes.py  test_sage_sam_editable.sh  test_v100.sh  train_sage_sam_editable.sh  train_v100.sh
tests/: sage_test_utils.py  test_adaptive_augmentation.py  test_calibration_split.py  (+20 more)
(+12 files in other folders)
